--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "pip3 install --user -r requirements.txt",
-	"postCreateCommand": "sudo apt update && sudo apt install busybox"
+	//"postCreateCommand": "sudo apt update && sudo apt install busybox"
 	//busybox nslookup github.com
 	
 	// Configure tool-specific properties.
